# EcoPulse

./: .gitignore  Dockerfile  README.md  deployment.yaml  docker-entrypoint.sh  facilities_timeseries.py  fetch_facilities_metadata.py  main.py  market.py  network.py  network_test.py  pyproject.toml  test copy.py  test.py  transformed_facilities.csv  transformed_facility_timeseries.csv  transformed_market.csv  transformed_network.csv
.astro/: config.yaml
app/: main.py
app/api/v1/routes/: __init__.py  facility.py
app/core/: config.py
app/crud/: base.py  facility.py  network.py
app/db/: init_db.py  session.py
app/etl/: base.py  common.py  extract.py  extract_network.py  facility.py  facility_runner.py  facility_timeseries.py  facility_timeseries_runner.py  facility_timeseries_test.py  load.py  load_network.py  loader.py  market.py  market_runner.py  network.py  network_runner.py  one_off.py  run_etl.py  sync_daily.py  sync_hourly.py  sync_monthly.py  transform.py  transform_network.py
app/models/: base.py  facility.py  facility_timeseries.py  market.py  network.py
app/schemas/: facility.py  facility_timeseries.py  market.py  network.py
carbon_footprint/: generate_structure.sh  main.py  pyproject.toml
carbon_footprint/app/: main.py
carbon_footprint/app/ml/: ann.py  datasets.py  lstm.py  online_update.py  train.py
dags/: env_test.py  etl_dag.py  etl_dag_one_of.py  facility_timeseries_daily_etl.py  facitily_monthly_etl.py  market_timeseries_daily_etl.py  network_timeseries_daily_etl.py
output/: facilities_metadata.csv
(+2 files in other folders)
