[project]
name = "ecopulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.122.0",
    "greenlet>=3.2.4",
    "openelectricity>=0.9.2",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pytz>=2025.2",
    "sqlalchemy==1.4.54",
    "pydantic>=2.10.3",
]
